# krackn-hive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
.cursor/: SETUP.md
.cursor/rules/: fastapi.mdc  krackn-hive.mdc  python-async.mdc
.cursor/skills/github-mcp/: SKILL.md
.cursor/skills/krackn-hive-upgrade/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 86ed567552da_initial_schema.py
krackn_hive/: __init__.py  abandonment.py  api.py  config.py  db.py  event_bus.py  lifecycle.py  main.py  models.py  pheromones.py  policies.py  registry.py  scheduler.py  schemas.py  scoring.py  storage.py  swarm.py
krackn_hive/agents/: __init__.py  base.py  drone.py  guard.py  queen.py  scout.py  worker.py
krackn_hive/tools/: __init__.py  fake_tools.py
tests/: conftest.py  test_api_integration.py  test_swarm.py
