[project]
name = "krackn-hive"
version = "0.1.0"
description = "Swarm architecture for engineering task management"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.29.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
